k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: deployment-manager
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

# Source: https://kubernetes.io/docs/concepts/services-networking/service/
